@@ -15,7 +15,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+
 
 @RestController
 @RequestMapping("/publications")
@@ -96,7 +96,7 @@ public class PublicationController {
                     return notif;
                 })
                 .limit(10)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
